--- a/index.html
+++ b/index.html
@@ -46,12 +46,107 @@
 
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Fluid jumbotron</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        <h1 class="display-4">Providing <span>Clean Energy</span> Solution</h1>
+        <a href="" class="btn btn-primary tombol">Contact Us</a>
       </div>
     </div>
 
     <!-- Akhir Jumbotron -->
+
+    <!-- Container -->
+    <div class="container">
+
+      <!-- info panel --> 
+      <div class="row justify-content-center">
+        <div class="col-10 info-panel">
+
+          <div class="row">
+            <div class="col-lg">
+              <img src="img/employee.png" alt="Employee" class="float-left">
+              <h4>24 Hours</h4>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+
+            <div class="row">
+              <div class="col-lg">
+                <img src="img/hires.png" alt="High Res" class="float-left">
+                <h4>High-Res</h4>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>  
+
+            <div class="row">
+              <div class="col-lg">
+                <img src="img/security.png" alt="Security" class="float-left">
+                <h4>Security</h4>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>  
+          </div>
+        </div>
+      </div>
+      <!-- akhri info panel-->     
+
+      <!-- Working space -->
+
+      <div class="row workingspace">
+        <div class="col-lg-6">
+          <img src="img/workingspace.png" alt="Workingspace" class="img-fluid">
+        </div>
+        <div class="col-lg-5">
+          <h3>You <span>work</span> like at <span>home</span></h3>
+          <p>Bekerja dengan suasana hati yang lebih asik dan mempelajari hal baru setiap harinya</p>
+          <a href="" class="btn btn-primary tombol">Gallery</a>
+        </div>
+      </div>
+
+      <!-- akhir working space-->
+
+      <!-- Testimonial-->
+
+      <section class="testimonial">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <h5>" Bekerja dengan suasana hati yang lebih asik dan mempelajari hal baru setiap harinya. "</h5>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-lg-6 justify-content-center d-flex">
+            <figure class="figure">
+              <img src="img/img1.png" class="figure-img img-fluid rounded-circle" alt="Testi 1">
+            </figure>
+            <figure class="figure">
+              <img src="img/img2.png" class="figure-img img-fluid rounded-circle utama" alt="Testi 2">
+              <figcaption class="figure-caption">
+                <h5>Sunny Ye</h5>
+                <p>Designer</p>
+              </figcaption>
+            </figure>
+            <figure class="figure">
+              <img src="img/img3.png" class="figure-img img-fluid rounded-circle" alt="Testi 3">
+            </figure>
+          </div>
+        </div>
+      </section>
+      <!-- akhir testimonial -->
+
+      <!-- footer -->
+      <div class="row footer">
+        <div class="col text-center">
+          <p>2020 All Rights Reserved by Julian</p>
+        </div>
+      </div>
+
+
+      <!-- akhir footer -->
+
+
+
+
+    </div>
+    <!-- akhir container-->
+
 
 
 
