--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <!-- info panel --> 
       <div class="row justify-content-center">
-        <div class="col-10 info-panel">
+        <div class="col-lg-10 info-panel">
 
           <div class="row">
             <div class="col-lg">
@@ -67,21 +67,18 @@
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
 
-            <div class="row">
               <div class="col-lg">
                 <img src="img/hires.png" alt="High Res" class="float-left">
                 <h4>High-Res</h4>
                 <p>Lorem ipsum dolor sit amet.</p>
               </div>
-            </div>  
 
-            <div class="row">
               <div class="col-lg">
                 <img src="img/security.png" alt="Security" class="float-left">
                 <h4>Security</h4>
                 <p>Lorem ipsum dolor sit amet.</p>
               </div>
-            </div>  
+              
           </div>
         </div>
       </div>
