--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
     <!-- My Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
 
-
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Julian Azwar</title>
+    <title>Xolarku</title>
   </head>
+  
   <body>
-      
-    <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-light ">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
       <div class="container">
           <a class="navbar-brand" href="#">Xolarku</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,24 +32,20 @@
               <a class="nav-item nav-link" href="#">Pricing</a>
               <a class="nav-item nav-link" href="#">Features</a>
               <a class="nav-item nav-link" href="#">About</a>
-              <a class="nav-item btn btn-primary tombol" href="#">Contact Us</a>
+              <a class="nav-item btn btn-primary tombol" href="#contact">Contact Us</a>
             </div>
           </div>
       </div>
     </nav>
-
     <!-- Akhir Navbar -->
 
-
     <!-- My Jumbotron -->
-
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4">Providing <span>Clean Energy</span> Solution</h1>
-        <a href="" class="btn btn-primary tombol">Contact Us</a>
+        <a href="#contact" class="btn btn-primary tombol">Contact Us</a>
       </div>
     </div>
-
     <!-- Akhir Jumbotron -->
 
     <!-- Container -->
@@ -82,7 +77,7 @@
           </div>
         </div>
       </div>
-      <!-- akhri info panel-->     
+      <!-- akhir info panel-->     
 
       <!-- Working space -->
 
